# codesnap

./: .flake8  .gitignore  .gitlab-ci.yml  README.adoc  README.md  pyproject.toml
.github/workflows/: ci.yml
codesnap/: __init__.py  __main__.py  analyzer.py  cli.py  config.py  core.py  filters.py  formatters.py  summarize.py  utils.py
codesnap/docs/: TODO.md
codesnap/tests/: __init__.py  test_cli.py  test_core.py  test_filters.py  test_formatters.py  test_utils.py
docs/: TODO.md
tests/: test_analyze.py  test_cli.py  test_config.py  test_core.py  test_filters.py  test_formatters.py  test_generative.py  test_integration.py  test_main.py  test_summarize.py  test_utils.py
