[project]
name = "codesnap"
version = "1.0.2"
description = "Generate LLM-friendly code snapshots with smart filtering and clipboard support"
# readme = "README.adoc"
requires-python = ">=3.13,<3.14"
license = { text = "MIT" }
authors = [
    { name = "Henning Krause", email = "henning.krause90@googlemail.com" }
]
keywords = ["cli", "code", "snapshot", "llm", "ai", "context"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    "tiktoken>=0.5.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "pathspec>=0.12.0",
    "httpx>=0.27.0",
]

[project.scripts]
codesnap = "codesnap.cli:main"

[project.urls]
Homepage = "https://github.com/henningkrause/codesnap"
Repository = "https://github.com/henningkrause/codesnap"
Issues = "https://github.com/henningkrause/codesnap/issues"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "black>=24.10.0",
    "pre-commit>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["codesnap", "README.md", "LICENSE"]

[tool.hatch.build.targets.wheel]
packages = ["codesnap"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "C90", "UP", "S", "T", "A", "C4", "SIM", "RET"]
ignore = ["S101"]  # assert used in tests

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["codesnap/tests"]
addopts = "-v --cov=codesnap --cov-report=term-missing"